WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132013
AX: iOS hit-testing does not work when page is zoomed
https://bugs.webkit.org/show_bug.cgi?id=132013
Summary
AX: iOS hit-testing does not work when page is zoomed
chris fleizach
Reported
2014-04-22 10:44:16 PDT
Accessibility hit-testing does not work when the page has a zoom level <
rdar://problem/16608231
>
Attachments
patch
(1.56 KB, patch)
2014-04-22 10:46 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-04-22 10:46:03 PDT
Created
attachment 229895
[details]
patch
WebKit Commit Bot
Comment 2
2014-04-22 16:52:20 PDT
Comment on
attachment 229895
[details]
patch Clearing flags on attachment: 229895 Committed
r167690
: <
http://trac.webkit.org/changeset/167690
>
WebKit Commit Bot
Comment 3
2014-04-22 16:52:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug