AX: iOS hit-testing does not work when page is zoomed https://bugs.webkit.org/show_bug.cgi?id=132013

Reviewed by Simon Fraser.

Implement accessibilityHitTest so that the point can be converted correctly.

* WebProcess/WebPage/WKAccessibilityWebPageObjectIOS.mm:
(-[WKAccessibilityWebPageObject accessibilityHitTest:]):


Canonical link: https://commits.webkit.org/150107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167690 268f45cc-cd09-0410-ab3c-d52691b4dbfc